Added delegates and restyled whole site

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,7 @@
-# Introduction
+# Введение
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+Сайт предназначен для навигации по конспектам, для их изучения и написания
 
-## What is Nextra?
+## С чего начать?
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
-
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+Например, можно перейти в одну из категорий:
