--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,3 +1,14 @@
-# About
+import { Callout } from 'nextra-theme-docs'
+import * as React from 'react';
 
-This is the about page! This page is shown on the navbar.
+# О пространстве
+
+<Callout type="info" emoji="ℹ️">
+    **Важно:** Общая страница для всех элементов учебы, распределенная по категориям. 
+</Callout>
+
+Здесь важно соблюдать два правила: 
+- Аккуратность во всем, касаемо конспектов и организации пространства
+- Целеустремленность по отношению к учебе
+
+
